--- a/first website.html
+++ b/first website.html
@@ -1,5 +1,17 @@
 <h1>Charles Shi</h1>
-
+<style>
+  body {
+    background-color: lavender;
+    color: lavender;
+    font-family:Arial;
+    font-size: 16pt;
+  }
+  div {
+    background-color: black;
+    border: 10px solid green;
+    margin-left: auto;
+    margin-right: auto;
+  }
 <p>My name is Charles Shi, I am 14 years old and I good Lord Byng Secondary School.
 I like playing with my friends and working with then together.</p>
 
