--- a/first website.html
+++ b/first website.html
@@ -12,6 +12,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+ </style>
 <p>My name is Charles Shi, I am 14 years old and I good Lord Byng Secondary School.
 I like playing with my friends and working with then together.</p>
 
