--- a/first website.html
+++ b/first website.html
@@ -11,6 +11,9 @@
     border: 10px solid green;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0px;
+    padding: 30px;
+    width: 600px;
   }
  </style>
 <p>My name is Charles Shi, I am 14 years old and I good Lord Byng Secondary School.
