--- a/first website.html
+++ b/first website.html
@@ -1,47 +1,94 @@
+<!DOCTYPE html> 
+
+<html> 
+
+<head>
+	<title>First Website</title>
+	<style>
+	
+		body {
+			background-color: lavender;	
+			
+			color: lavender;
+			font-family: Arial;
+			font-size: 16pt;
+		}
+		
+		div {
+			background-color: black;
+			border-radius:100px;
+			border: 10px solid yellow;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: 0px;
+			padding: 30px;
+			width: 600px;
+		}
+		
+		h1 {
+			color: blue;
+			font-size: 50pt;
+			text-align: center;
+		}
+		
+		h2 {
+			color: blue;
+		}
+		
+		img {
+			float: left;
+			margin-right: 20px;
+			margin-bottom: 10px;
+			border: 5px solid green;
+		}
+		
+	</style>
+	
+</head>
+
+<body> 
+
+<div>
+
+
 <h1>Charles Shi</h1>
-<style>
-  body {
-    background-color: lavender;
-    color: lavender;
-    font-family:Arial;
-    font-size: 16pt;
-  }
-  div {
-    background-color: black;
-    border: 10px solid green;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0px;
-    padding: 30px;
-    width: 600px;
-  }
- </style>
-<p>My name is Charles Shi, I am 14 years old and I good Lord Byng Secondary School.
+
+<img src="GTA 5.png" width="200px">
+
+<p>My name is Charles Shi, I am 14 years old and I go to Lord Byng Secondary School.
 I like playing with my friends and working with then together.</p>
 
-<p>I like to play the cello and I like to play badminton. I started to play the cello when I was 4.
-I went to Vancouver Youth Symphony Orchestra, it was a lot of fun. But I had too many other things to do for school, so I quit.</p>
+<p>I like to play the cello and I like to play badminton. I started playing the cello when I was 4.
+I went to Vancouver Youth Symphony Orchestra, it was a lot of fun. But I had too many other things to do for school, so I quit.</p> 
 
-<h2>Things I like:</h2>
+<br>
+
+
+<h2>Things I like</h2>
+<ul>
+  <li>Video Games</li>
+  <li>Programming</li>
+  <li>LEGO</li>
+</ul>
+
+<h2>Things I don't like</h2>
 <ol>
-<li>Video Games</li>
-<li>Programming</li>
-<li>LEGO</li>
+  <li>Homework</li>
+  <li>no fun</li>
+  <li>griefers in gta online</li>
 </ol>
 
-<h2>Things I do not like:</h2>
-<ol>
-<li>homework</li>
-<li>no fun</li>
-<li>griefers in gta online</li>
-</ol>
+<p>Link to <a href="http://www.codingbat.com">a website</a> good practice for programmers. </p> 
 
-<h2>My favorite website:</h2>
-<a href="https://codingbat.com">website</a>
+<p>Youtube Video I like:</p> 
 
-<h2>My favorite Youtube video:</h2>
-https://www.youtube.com/watch?v=QkkoHAzjnUs<iframe width="949" height="534" src="https://www.youtube.com/embed/QkkoHAzjnUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+https://www.youtube.com/watch?v=QkkoHAzjnUs<iframe width="560" height="315" src="https://www.youtube.com/embed/QkkoHAzjnUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<h2> My image:</h2>
-<img src = "GTA 5.png">
 
+
+</div>
+
+
+</body>
+
+</html>
